--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,13 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1>INTRODUCCION A TYPESCRIPT</h1>
+    <h2>Contador:<span id="contador">0</span></h2>
+    <tr>
+      <td><button id="btnContadorIncrementar">Incrementar</button></td>
+      <td><button id="btnContadorDecrementar">Decrementar</button></td>
+    </tr>
+    
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
